# card-demo

./: .gitignore  ReadME.md  compose.yaml
backend/: README.md  card_demo.sql  main.py  pyproject.toml
frontend/: .env  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: CardForm.tsx
frontend/src/pages/: CardPreview.tsx  Dashboard.tsx  Login.tsx  Register.tsx
