[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-jwt-extended",
    "flask-cors",
    "werkzeug",
    "flask-pymysql",
    "cryptography>=44.0.3",
]

[tool.uv.sources]
flask-pymysql = { git = "https://github.com/derrick921213/flask-pymysql" }
